--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     index index.php;
     server_name localhost;
-    root /var/www/docker_sf/public;
+    root /var/www/docker_tool_symfony/public;
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
 
@@ -10,9 +10,9 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    location ~ ^/index\\.php(/|$) {
+    location ~ ^/index\.php(/|$) {
         fastcgi_pass php:9000;
-        fastcgi_split_path_info ^(.+\\.php)(/.*)$;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
 
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
@@ -25,7 +25,11 @@ server {
         internal;
     }
 
-    location ~ \\.php$ {
+    location ~ \.php$ {
         return 404;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
